# starsim_ai

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  deploy  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: main.yml
claude_plugin/: .mcp.json  README.md
claude_plugin/.claude-plugin/: marketplace.json
claude_plugin/skills/sciris-utilities/: SKILL.md
claude_plugin/skills/starsim-modeling/: SKILL.md
claude_plugin/skills/starsim-style-docs/: SKILL.md
claude_plugin/skills/starsim-style-tests/: SKILL.md
deploy_mcp_pack/: README.md  deploy
docs/plans/: 2026-02-23-multi-plugin-reorganization.md  2026-02-24-starsim-dev-skills-design.md
internal/: README.md  feedback-mnch-session.md
internal/engineering_quality/: engineering_quality_guidelines.md
internal/process_starsim_docs/: README.md
internal/process_talks/: README.md  debug_agent_knowledge.py  download_transcripts.py  parallel_url_processing.py  process_common.py  summarize_summaries.py  summarize_transcripts.py
plugins/: README.md
plugins/disease_modeling/: README.md
plugins/disease_modeling/.claude-plugin/: plugin.json
plugins/disease_modeling/skills/: README.md
plugins/project-improver/: CHANGELOG.md  README.md  engineering_quality_guidelines.md
plugins/project-improver/.claude-plugin/: plugin.json
plugins/project-improver/admin/: README.md  engineering_quality_guidelines.md  initial_prompt.md  update_prompt.md
plugins/project-improver/agents/: quality-scorer.md  (+2 more)
plugins/starsim/: AGENTS.md  README.md
starsim_plugin/: README.md
(+40 files in other folders)
